SFDCProject/src/objects/Fleet_Operations__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Fleet Operations Articles.</description>
    <fields>
        <fullName>Article_Body__c</fullName>
        <label>Article Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment_1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <label>Fleet Operations</label>
    <pluralLabel>Fleet Operations</pluralLabel>
</CustomObject>